# auto-post-classifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  auto-post-classifier.service  docker-compose.yml  entrypoint.sh  example.env  example_posts.csv  image_captioning.py  main.py  models.py  prompts.md  pyproject.toml  requirements.txt  run_cron_task.sh  test.ipynb  test_main.py  utils.py
.github/workflows/: code_style.yml
auto_post_classifier/: api.json  api.py  api_manager.py  api_request_parallel_processor.py  consts.py  gpt_handler.py  image_captioning.py  main.py  main_old.py  mock.py  models.py  response_logger.py  response_persister.py  responses.txt  sample.json  test_main.py  testing_utils.py  utils.py
auto_post_classifier/prompts/: gpt3_5_user.prompt
data/: AntiIsraeli.csv
mock/: responses  responses_5  sample_1.mock
output/: .gitignore
prompts/: gpt3_5_system.prompt  gpt3_5_user.prompt
results/: result_16.txt  result_52.txt
scripts/: pull_logs.sh
tests/: api_call.py  t.py  test_api.py
